--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,19 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
 
-
-    <!--Fragment-->
-    <FrameLayout
-        android:id="@+id/contentMainFragment"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <!--Fragment-->
+        <FrameLayout
+            android:id="@+id/contentMainFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
+
+
 
 
 </LinearLayout>
@@ -33,16 +40,17 @@
         android:background="#ffffff"
         android:orientation="vertical"
         android:layout_width="320dp"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:text="Drawer Menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:text="Drawer Menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-</LtnraLayout>
+
+</LinearLayout>
 
 
 </android.support.v4.widget.DrawerLayout>
