--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -5,6 +5,7 @@
 
     <!--Red Layout-->
     <LinearLayout
+        android:padding="20dp"
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:layout_width="wrap_content"
@@ -18,8 +19,9 @@
 
             <!--Green Layout-->
             <RelativeLayout
-                android:layout_width="150dp"
-                android:layout_height="150dp">
+                android:layout_margin="@dimen/margin"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon">
 
                 <!--Station1-->
                 <ImageView
@@ -35,8 +37,9 @@
 
             <!--Green Layout-->
             <RelativeLayout
-                android:layout_width="150dp"
-                android:layout_height="150dp">
+                android:layout_margin="@dimen/margin"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon">
 
 
                   <!--Station2-->
@@ -63,29 +66,38 @@
 
             <!--Green Layout-->
             <RelativeLayout
-                android:layout_width="150dp"
-                android:layout_height="150dp">
+                android:layout_margin="@dimen/margin"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon">
 
                 <!--Station3-->
                 <ImageView
-                    android:src="@drawable/station3"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:src="@drawable/station3" />
 
             </RelativeLayout>
 
             <!--Green Layout-->
             <RelativeLayout
-                android:layout_width="150dp"
-                android:layout_height="150dp">
+                android:layout_margin="@dimen/margin"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon">
 
                 <!--Station4-->
                 <ImageView
-                    android:src="@drawable/station4"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:src="@drawable/station4" />
 
-            </RelativeLayout>
+             </RelativeLayout>
+
 
         <!--Red Layout-->
         </LinearLayout>
