--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--Wallpaper-->
+        <ImageView
+            android:scaleType="centerCrop"
+            android:src="@drawable/bg1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
         <!--Fragment-->
         <FrameLayout
             android:id="@+id/contentMainFragment"
