--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -5,6 +5,7 @@
 
     <!--Red Layout-->
     <LinearLayout
+        android:background="#82ffffff"
         android:padding="20dp"
         android:layout_centerInParent="true"
         android:orientation="vertical"
@@ -83,7 +84,6 @@
 
             <!--Green Layout-->
             <RelativeLayout
-                android:layout_margin="@dimen/margin"
                 android:layout_width="@dimen/icon"
                 android:layout_height="@dimen/icon">
 
