--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
 
     <!--ToolBar-->
 <android.support.v7.widget.Toolbar
+    android:id="@+id/toolbartMain"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
