--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -26,6 +26,7 @@
 
                 <!--Station1-->
                 <ImageView
+                    android:id="@+id/imageViewStation1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -35,16 +36,19 @@
 
                 <!--Title-->
                 <TextView
-                    android:layout_alignParentBottom="true"
-                    android:padding="5dp"
-                    android:gravity="center_horizontal"
-                    android:textColor="#ffffff"
-                    android:background="#82000000"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:text="Station 1"
+                    android:id="@+id/textViewStation1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:background="#82000000"
+                    android:gravity="center_horizontal"
+                    android:padding="5dp"
+                    android:text="@string/station1"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -72,7 +76,7 @@
                     android:background="#82000000"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="Station 1"
+                    android:text="@string/station2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView2" />
@@ -113,7 +117,7 @@
                     android:background="#82000000"
                     android:gravity="center_horizontal"
                     android:padding="5dp"
-                    android:text="Station 1"
+                    android:text="@string/station3"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -148,7 +152,7 @@
                     android:background="#82000000"
                     android:gravity="center_horizontal"
                     android:padding="5dp"
-                    android:text="Station 1"
+                    android:text="@string/station4"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
