--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -26,6 +26,7 @@
 
                 <!--Station1-->
                 <ImageView
+                    android:clickable="true"
                     android:id="@+id/imageViewStation1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
