--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -37,6 +37,7 @@
 
                 <!--Title-->
                 <TextView
+                    android:clickable="true"
                     android:id="@+id/textViewStation1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -63,6 +64,8 @@
 
                   <!--Station2-->
                 <ImageView
+                    android:="true"
+                    android:id="@+id/imageViewStation2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
@@ -70,6 +73,8 @@
 
                 <!--Title-->
                 <TextView
+                    android:clickable="true"
+                    android:id="@+id/textViewStation2"
                     android:layout_alignParentBottom="true"
                     android:padding="5dp"
                     android:gravity="center_horizontal"
@@ -79,8 +84,7 @@
                     android:textSize="18sp"
                     android:text="@string/station2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView2" />
+                    android:layout_height="wrap_content"/>
 
             </RelativeLayout>
 
